--- a/style.css
+++ b/style.css
@@ -1552,6 +1552,16 @@ body.loaded::before {
   max-width: 180px;
 }
 
+.wiki-figure--inline img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  display: block;
+  border: 1px solid #e5e7eb;
+  cursor: pointer;
+  transition: opacity 0.2s ease;
+}
+
 .wiki-figure--wide img {
   width: 100%;
   height: auto;
